--- a/SportsInviter/Process.xaml
+++ b/SportsInviter/Process.xaml
@@ -76,12 +76,12 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <If Condition="[in_TransactionItem(&quot;Teamname&quot;).ToString= &quot;&quot;]" sap:VirtualizedContainerService.HintSize="561,1259" sap2010:WorkflowViewState.IdRef="If_1">
+    <If Condition="[in_TransactionItem(&quot;Teamname&quot;).ToString= &quot;&quot;]" DisplayName="If Team name is empty" sap:VirtualizedContainerService.HintSize="561,1259" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
         <Throw Exception="[new BusinessRuleException(&quot;InvalidData&quot;)]" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="Throw_1" />
       </If.Then>
       <If.Else>
-        <Sequence sap:VirtualizedContainerService.HintSize="336,1111" sap2010:WorkflowViewState.IdRef="Sequence_2">
+        <Sequence DisplayName="Read config  Settings Sequence" sap:VirtualizedContainerService.HintSize="336,1111" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -145,7 +145,7 @@
           </Assign>
           <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" Buttons="Ok" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="314,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[TeamName]" TopMost="True" />
           <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="314,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Team name:&quot;+in_TransactionItem(&quot;Teamname&quot;).ToString]" />
-          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Workflow File" sap:VirtualizedContainerService.HintSize="314,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="SportsNotifierMain.xaml">
+          <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Sports Notifier Workflow File" sap:VirtualizedContainerService.HintSize="314,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="SportsNotifierMain.xaml">
             <ui:InvokeWorkflowFile.Arguments>
               <InArgument x:TypeArguments="x:String" x:Key="argTeamName">[TeamName]</InArgument>
               <InArgument x:TypeArguments="x:String" x:Key="argWeatherAPIKey">[WeatherAPIKey]</InArgument>
